--- a/To Do List/src/components/style.module.css
+++ b/To Do List/src/components/style.module.css
@@ -1,20 +1,99 @@
-.taskCard{
-    background: #333;
-    width: 500px;
-    margin: 0 auto 10px;
-    padding: 10px;
-    text-align: left;
-    border-radius: 16px;
-    min-height: 60px;
+.taskCard {
+  background: #333;
+  width: 500px;
+  margin-bottom: 10px;
+  padding: 10px;
+  text-align: left;
+  border-radius: 16px;
+  min-height: 60px;
 }
 
-.taskCardCompleted{
-    background: #555;
-    width: 500px;
-    margin: 0 auto 10px;
-    padding: 10px;
-    text-align: left;
-    border-radius: 16px;
-    min-height: 60px;
-    opacity: .3;
+.taskCardCompleted {
+  background: #555;
+  width: 500px;
+  margin-bottom: 10px;
+  padding: 10px;
+  text-align: left;
+  border-radius: 16px;
+  min-height: 60px;
+  opacity: 0.3;
+}
+
+.addTaskForm {
+  padding-top: 50px;
+  width: 500px;
+  height: 300px;
+  background: #3e3e3e;
+  border-radius: 18px;
+  position: fixed;
+}
+
+.titles {
+  text-align: left;
+  margin: 0;
+  text-indent: 30px;
+}
+
+.inputs {
+  display: block;
+  margin: 10px auto;
+  width: 90%;
+  height: 40px;
+  border-radius: 16px;
+  text-indent: 20px;
+  outline: 0 none;
+  border: 0 none;
+  background: #585858;
+}
+.button:hover {
+  transform: scale(0.9);
+}
+.button {
+  transition: 0.3s;
+  width: 80px;
+  height: 40px;
+  background: lime;
+  font-size: 20px;
+  font-weight: 900;
+  border-radius: 8px;
+  border: 0 none;
+  cursor: pointer;
+  margin-top: 15px;
+}
+.closeBtn:hover {
+  transform: scale(0.9);
+}
+.closeBtn {
+  transition: 0.4s;
+  cursor: pointer;
+  font-size: 25px;
+  font-weight: 900;
+  color: red;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: 10px;
+}
+
+.openBtn {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  transition: 0.4s;
+  cursor: pointer;
+  font-size: 25px;
+  font-weight: 900;
+  margin: 0;
+  border: 0 none;
+  border-radius: 50%;
+  padding: 0;
+  display: block;
+}
+
+.continer {
+  width: 500px;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
 }
